--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="./articoli.html">Annunci</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Chi siamo</a>
+                <a class="nav-link" href="./chisiamo.html">Chi siamo</a>
               </li>
             </ul>
             
